--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
   "author": "Bhupinder Singh",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "save": "^2.5.0"
   },
