--- a/newBackend/package.json
+++ b/newBackend/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "react-gitignore": "^1.0.12"
   }
 }
